[package]
name = "reddit_discord_bot"
version = "0.1.0"
authors = ["alanphil2k01 <alanphilipose@gmail.com>"]
edition = "2018"

[dependencies]
serenity = {version = "0.10",default-features = false,features = ["client", "gateway", "rustls_backend", "model"]}
tokio = {version = "1.0", features = ["full"]}
reqwest = "0.11.2"
serde_json = "1.0.64"
